// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test react hook \`useWhyDidYouUpdate\` should work with complex props 1`] = `
{
  "console": "log",
  "messages": [
    "[why-did-you-update] 'TestComponent' first render.",
  ],
}
`;

exports[`Test react hook \`useWhyDidYouUpdate\` should work with complex props 2`] = `
{
  "console": "log",
  "messages": [
    "[why-did-you-update] 'TestComponent'",
    {
      "style": {
        "from": undefined,
        "to": {
          "fontSize": "28px",
        },
      },
    },
  ],
}
`;

exports[`Test react hook \`useWhyDidYouUpdate\` should work with complex props 3`] = `
{
  "console": "log",
  "messages": [
    "[why-did-you-update] 'TestComponent'",
    {
      "style": {
        "from": {
          "fontSize": "28px",
        },
        "to": {
          "fontSize": "28px",
          "margin": "8px 0px",
        },
      },
      "title": {
        "from": "title",
        "to": "new-title",
      },
    },
  ],
}
`;

exports[`Test react hook \`useWhyDidYouUpdate\` should work with complex props 4`] = `
{
  "console": "log",
  "messages": [
    "[why-did-you-update] 'TestComponent'",
    {
      "color": {
        "from": "red",
        "to": "green",
      },
      "style": {
        "from": {
          "fontSize": "28px",
          "margin": "8px 0px",
        },
        "to": {
          "fontSize": "28px",
          "margin": "8px 0px",
        },
      },
    },
  ],
}
`;

exports[`Test react hook \`useWhyDidYouUpdate\` should work with simple props 1`] = `
{
  "console": "log",
  "messages": [
    "[why-did-you-update] 'TestComponent' first render.",
  ],
}
`;

exports[`Test react hook \`useWhyDidYouUpdate\` should work with simple props 2`] = `
{
  "console": "log",
  "messages": [
    "[why-did-you-update] 'TestComponent'",
    {
      "fontSize": {
        "from": "20px",
        "to": 20,
      },
    },
  ],
}
`;

exports[`Test react hook \`useWhyDidYouUpdate\` should work with simple props 3`] = `
{
  "console": "log",
  "messages": [
    "[why-did-you-update] 'TestComponent'",
    {
      "title": {
        "from": "title",
        "to": "new-title",
      },
    },
  ],
}
`;

exports[`Test react hook \`useWhyDidYouUpdate\` should work with simple props 4`] = `
{
  "console": "log",
  "messages": [
    "[why-did-you-update] 'TestComponent'",
    {
      "fontSize": {
        "from": 20,
        "to": "28px",
      },
    },
  ],
}
`;
